--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ env:
   - FOLDER_PATH="/ibmcom/"
   - IMAGE_NAME_PLUGIN="wazi-code-plugin"
   - IMAGE_NAME_DEVFILE="wazi-code-dev-file"
+before_install:
 install: 
   - docker build -t ${REPOSITORY}${FOLDER_PATH}${IMAGE_NAME_PLUGIN}:latest -f ./dependencies/che-plugin-registry/build/dockerfiles/rhel.Dockerfile --build-arg "PATCHED_IMAGES_TAG=2.2" --build-arg LATEST_ONLY="false" --build-arg "USE_DIGESTS=false" --target "registry" ./dependencies/che-plugin-registry/
   - docker build -t ${REPOSITORY}${FOLDER_PATH}${IMAGE_NAME_DEVFILE}:latest -f ./dependencies/che-devfile-registry/build/dockerfiles/rhel.Dockerfile --build-arg "PATCHED_IMAGES_TAG=2.2" --build-arg LATEST_ONLY="false" --build-arg "USE_DIGESTS=false" --target "registry" ./dependencies/che-devfile-registry/
 script: echo "Success!"
+notifications:
+  slack: ibm-systems-z:kiD2FZtJUJtUSp57dwHWwNX1
