--- a/dependencies/che-devfile-registry/devfiles/05_go/devfile.yaml
+++ b/dependencies/che-devfile-registry/devfiles/05_go/devfile.yaml
@@ -20,7 +20,7 @@ components:
     go.lintFlags: ['--fast']
 -
   type: dockerimage
-  image: registry.redhat.io/codeready-workspaces/stacks-golang-rhel8:2.2
+  image: registry.redhat.io/codeready-workspaces/stacks-golang-rhel8:2.3
   alias: go-cli
   env:
     - name: GOPATH
@@ -37,18 +37,18 @@ components:
   mountSources: true
 commands:
 -
-  name: Run the application
-  actions:
-  - type: exec
-    component: go-cli
-    command: ./golang-health-check
-    workdir: ${CHE_PROJECTS_ROOT}/golang-health-check
--
-  name: Build the application
+  name: 1. Build the application
   actions:
   - type: exec
     component: go-cli
     command: go build
+    workdir: ${CHE_PROJECTS_ROOT}/golang-health-check
+-
+  name: 2. Run the application
+  actions:
+  - type: exec
+    component: go-cli
+    command: ./golang-health-check
     workdir: ${CHE_PROJECTS_ROOT}/golang-health-check
 -
   name: Debug configuration
