update details, description, title, name etc

--- a/dependencies/che-devfile-registry/devfiles/01_wazi-development-client/devfile.yaml
+++ b/dependencies/che-devfile-registry/devfiles/01_wazi-development-client/devfile.yaml
@@ -27,8 +27,8 @@ components:
   alias: wazi-development-client
 -
   type: chePlugin
-  id: ibm/wazi-debugger/1.1.0
-  alias: wazi-debugger
+  id: ibm/wazi-debug/1.1.0
+  alias: wazi-debug
 -
   type: dockerimage
   alias: wazi
