--- a/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-debug/1.1.0/meta.yaml
+++ b/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-debug/1.1.0/meta.yaml
@@ -6,17 +6,17 @@
 # Contract with IBM Corp.
 apiVersion: v2
 publisher: ibm
-name: wazi-debugger
+name: wazi-debug
 version: 1.1.0
 type: VS Code extension
-displayName: IBM Wazi Debugger Tools
-title: IBM Wazi Debugger Tools
-description: This VS Code extension provides support for IBM Z debugging, based on the IBM Z Debug extension.
+displayName: IBM Z Open Debug
+title: IBM Z Open Debug
+description: This VS Code extension provides support for IBM Z debugging, based on the IBM Z Open Debug extensions.
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
-repository: https://github.com/IBM/zopeneditor-about.git
+repository: https://github.com/IBM/zopendebug-about.git
 category: Language
 firstPublicationDate: "2020-08-31"
 spec:
   extensions:
-  - relative:extension/plugins/ibm/wazi-debugger/1.1.0/extensions/zopendebug.vsix
-  - relative:extension/plugins/ibm/wazi-debugger/1.1.0/extensions/zopendebug-profileui.vsix
+  - relative:extension/plugins/ibm/wazi-debug/1.1.0/extensions/zopendebug.vsix
+  - relative:extension/plugins/ibm/wazi-debug/1.1.0/extensions/zopendebug-profileui.vsix
