add vscode yaml plugin in stack

--- a/dependencies/che-devfile-registry/devfiles/01_wazi-development-client/devfile.yaml
+++ b/dependencies/che-devfile-registry/devfiles/01_wazi-development-client/devfile.yaml
@@ -30,6 +30,10 @@ components:
   id: ibm/wazi-debug/1.1.0
   alias: wazi-debug
 -
+  type: chePlugin
+  id: redhat/vscode-yaml/0.8.0
+  alias: vscode-yaml
+-
   type: dockerimage
   alias: wazi
   image: docker.io/ibmcom/wazi-code-codeready:latest
