--- a/dependencies/che-devfile-registry/devfiles/01_wazi-developer/meta.yaml
+++ b/dependencies/che-devfile-registry/devfiles/01_wazi-developer/meta.yaml
@@ -10,8 +10,8 @@
 #   IBM Corporation - implementation
 #
 
-displayName: Wazi Development Client
-description: IBM Z Enterprise COBOL 6.3, PL/I 5.3, HLASM 2.4, Zowe CLI 6.3, Zowe Explorer 1.6, IBM User Build 1.1, IBM Z Open Debug 1.1
+displayName: Wazi Developer
+description: IBM Z Enterprise COBOL 6.3, PL/I 5.3, HLASM 2.4, Zowe CLI 6.21, Zowe Explorer 1.9, IBM User Build 1.1, IBM Z Open Debug 1.1
 tags: ["COBOL", "PL/I", "PLI", "PL1", "HLASM", "JCL", "IDE", "USER BUILD", "LSP", "language-server", "z/OS", "zOS", "IBM Z", "Z Software", "Zowe", "Mainframe", "Debug"]
 icon: /images/app-icon-light-.svg
 globalMemoryLimit: 3000Mi
