--- a/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-developer/1.1.0/meta.yaml
+++ b/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-developer/1.1.0/meta.yaml
@@ -16,7 +16,7 @@ name: wazi-developer
 version: 1.1.0
 type: VS Code extension
 displayName: Wazi Developer
-title: IBM Z Enterprise COBOL 6.3, PL/I 5.3, HLASM 2.4, Zowe CLI 6.21, Zowe Explorer 1.9, IBM User Build 1.1
+title: IBM Z Enterprise COBOL 6.3, PL/I 5.3, HLASM 2.4, Zowe CLI 6.21, Zowe Explorer 1.9
 description: Provides COBOL, PL/I, HLASM language servers and tools for IBM Z development.
 icon: https://raw.githubusercontent.com/IBM/zopeneditor-about/master/che/images/ibm-wazi-developer.svg
 repository: https://github.com/IBM/zopeneditor-about.git
@@ -39,4 +39,3 @@ spec:
   extensions:
   - relative:extension/plugins/ibm/wazi-developer/1.1.0/extensions/wazi-vscode-extension-for-zowe.vsix
   - relative:extension/plugins/ibm/wazi-developer/1.1.0/extensions/zopeneditor.vsix
-  - relative:extension/plugins/ibm/wazi-developer/1.1.0/extensions/userbuild.vsix
