--- a/dependencies/che-devfile-registry/devfiles/01_wazi-developer/devfile.yaml
+++ b/dependencies/che-devfile-registry/devfiles/01_wazi-developer/devfile.yaml
@@ -12,29 +12,24 @@
 
 apiVersion: 1.0.0
 metadata:
-    generateName: waziclient-
+    generateName: wazidev-
 projects:
-  -
-    name: zopeneditor-sample
+  - name: zopeneditor-sample
     source:
       type: git
       location: "https://github.com/IBM/zopeneditor-sample.git"
       branch: wazi-master
 components:
--
-  type: chePlugin
+- type: chePlugin
   id: ibm/wazi-developer/1.1.0
   alias: wazi-developer
--
-  type: chePlugin
+- type: chePlugin
   id: ibm/wazi-debug/1.1.0
   alias: wazi-debug
--
-  type: chePlugin
+- type: chePlugin
   id: redhat/vscode-yaml/0.8.0
   alias: vscode-yaml
--
-  type: dockerimage
+- type: dockerimage
   alias: wazi
   image: docker.io/ibmcom/wazi-code-codeready:latest
   memoryLimit: 512Mi
