Add debug profile folder volume
@ktopchi @swanj @n-sharma @Jack-Ho

--- a/dependencies/che-devfile-registry/devfiles/01_wazi-developer/devfile.yaml
+++ b/dependencies/che-devfile-registry/devfiles/01_wazi-developer/devfile.yaml
@@ -38,4 +38,6 @@ components:
       containerPath: /home/wazi/.zowe
     - name: m2
       containerPath: /home/wazi/.m2
+    - name: debug
+      containerPath: /home/wazi/.debug
   mountSources: true
