--- a/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-debug/1.2.0/meta.yaml
+++ b/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-debug/1.2.0/meta.yaml
@@ -1,5 +1,5 @@
 # Licensed Materials - Property of IBM
-# (C) Copyright IBM Corporation 2020. All Rights Reserved.
+# (C) Copyright IBM Corporation 2020-2021. All Rights Reserved.
 #
 # Note to U.S. Government Users Restricted Rights:
 # Use, duplication or disclosure restricted by GSA ADP Schedule
