--- a/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-developer/1.2.0/meta.yaml
+++ b/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-developer/1.2.0/meta.yaml
@@ -16,7 +16,7 @@ name: wazi-developer
 version: 1.2.0
 type: VS Code extension
 displayName: Wazi Developer
-title: IBM Z Enterprise COBOL 6.3, PL/I 5.3, HLASM 2.4, Zowe CLI 6.23, Zowe Explorer 1.10
+title: IBM Z Enterprise COBOL 6.3, PL/I 5.3, HLASM 2.4, Zowe CLI 6.25, Zowe Explorer 1.11
 description: Provides COBOL, PL/I, HLASM language servers and tools for IBM Z development.
 icon: https://raw.githubusercontent.com/IBM/zopeneditor-about/master/che/images/ibm-wazi-developer.svg
 repository: https://github.com/IBM/zopeneditor-about.git
@@ -24,7 +24,7 @@ category: Language
 firstPublicationDate: "2021-03-01"
 spec:
   containers:
-  - image: docker.io/ibmcom/wazi-code-codeready:{SIDECAR_TAG}
+  - image: docker.io/ibmcom/wazi-code-codeready@sha256:1cd617e78761bfeb6cbb5c6a57945c789af5aafbc1a186fe1fd55de387ffebb6
     name: ibm-wazi
     memoryLimit: "3000Mi"
     args:
@@ -36,6 +36,8 @@ spec:
       name: wazi
     - mountPath: "/home/wazi/.m2"
       name: m2
+    - mountPath: "/home/wazi/.debug"
+      name: debug
   extensions:
   - relative:extension/plugins/ibm/wazi-developer/1.2.0/extensions/wazi-vscode-extension-for-zowe.vsix
   - relative:extension/plugins/ibm/wazi-developer/1.2.0/extensions/zopeneditor.vsix
