--- a/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-developer/1.2.0/meta.yaml
+++ b/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-developer/1.2.0/meta.yaml
@@ -1,14 +1,9 @@
+# Licensed Materials - Property of IBM
+# (C) Copyright IBM Corporation 2021. All Rights Reserved.
 #
-# Copyright IBM Corporation 2020-2021
-# This program and the accompanying materials are made
-# available under the terms of the Eclipse Public License 2.0
-# which is available at https://www.eclipse.org/legal/epl-2.0/
-#
-# SPDX-License-Identifier: EPL-2.0
-#
-# Contributors:
-#   IBM Corporation - implementation
-#
+# Note to U.S. Government Users Restricted Rights:
+# Use, duplication or disclosure restricted by GSA ADP Schedule
+# Contract with IBM Corp.
 
 apiVersion: v2
 publisher: ibm
