--- a/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-developer/1.2.0/meta.yaml
+++ b/dependencies/che-plugin-registry/v3/plugins/ibm/wazi-developer/1.2.0/meta.yaml
@@ -19,7 +19,7 @@ category: Language
 firstPublicationDate: "2021-03-01"
 spec:
   containers:
-  - image: docker.io/ibmcom/wazi-code-codeready@sha256:1cd617e78761bfeb6cbb5c6a57945c789af5aafbc1a186fe1fd55de387ffebb6
+  - image: stg.icr.io/ibm/wazi-code/wazi-code-codeready@sha256:1cd617e78761bfeb6cbb5c6a57945c789af5aafbc1a186fe1fd55de387ffebb6
     name: ibm-wazi
     memoryLimit: "3000Mi"
     args:
