--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,13 @@ services:
 - docker
 env:
   global:
-  - REPOSITORY="docker.io"
-  - IMAGE_PATH="/ibmcom/"
-  - IMAGE_NAME_PLUGIN="wazi-code-plugin"
-  - IMAGE_NAME_DEVFILE="wazi-code-dev-file"
+  - IMAGE_DEVFILE="docker.io/ibmcom/wazi-code-dev-file"
+  - IMAGE_PLUGIN="docker.io/ibmcom/wazi-code-plugin"
   - PLUGIN_DOCKERFILE="./dependencies/che-plugin-registry/build/dockerfiles/rhel.Dockerfile"
   - DEVFILE_DOCKERFILE="./dependencies/che-devfile-registry/build/dockerfiles/rhel.Dockerfile"
 install: 
-  - docker build -t ${REPOSITORY}${IMAGE_PATH}${IMAGE_NAME_DEVFILE}:travis -f ${DEVFILE_DOCKERFILE} --build-arg "PATCHED_IMAGES_TAG=2.2" --build-arg LATEST_ONLY="false" --build-arg "USE_DIGESTS=false" --target "registry" ./dependencies/che-devfile-registry/
-  - docker build -t ${REPOSITORY}${IMAGE_PATH}${IMAGE_NAME_PLUGIN}:travis -f ${PLUGIN_DOCKERFILE} --build-arg "PATCHED_IMAGES_TAG=2.2" --build-arg LATEST_ONLY="false" --build-arg "USE_DIGESTS=false" --target "registry" ./dependencies/che-plugin-registry/
+  - docker build -t ${IMAGE_DEVFILE}:travis -f ${DEVFILE_DOCKERFILE} --build-arg "PATCHED_IMAGES_TAG=2.2" --build-arg "USE_DIGESTS=false" --target "registry" ./dependencies/che-devfile-registry/
+  - docker build -t ${IMAGE_PLUGIN}:travis -f ${PLUGIN_DOCKERFILE} --build-arg LATEST_ONLY="false" --build-arg "USE_DIGESTS=false" --target "registry" ./dependencies/che-plugin-registry/
 script: echo "Success!"
 notifications:
   slack: ibm-systems-z:kiD2FZtJUJtUSp57dwHWwNX1
